Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24899

ListView section delegate cannot be changed

    XMLWordPrintable

Details

    Description

      Run attached .qml
      Press the Delegate button

      Section delegates should have changed to a light blue delegate. Changing delegates works fine for ListView items, but not sections.

      Attachments

        1. qtbug-24899.png
          qtbug-24899.png
          20 kB
        2. sections.qml
          6 kB
        For Gerrit Dashboard: QTBUG-24899
        # Subject Branch Project Status CR V

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            dajansen Damian Jansen (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes