Fix section delegates not updating when changed.

Delete all allocated section items before doing an update when the
section delegate is changed.

Task-number: QTBUG-24899
Change-Id: I09dc7a1c602a49ad7bb37512a7e5116392259457
Reviewed-by: Martin Jones <martin.jones@nokia.com>